Updated with content now

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,14 @@
 ---
-title: Welcome to Middleman
+title: Tyler Baldwin
 ---
 
-<div class="welcome">
-  <h1>Middleman is Watching</h1>
-  <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
-  </p><!-- .doc -->
-</div><!-- .welcome -->
+<article class="about">
+  <p><strong>Tyler Baldwin</strong> is a gamer, student, lover and a winner
+  located in Houston, TX. He fights for all things justice and likes unicorns
+  just as much as the next guy. It's not a secret to everyone that he's here to
+  help you.</p>
+
+  <p>Send him your questions, comments, and concerns via <a
+    href="mailto:me@tylerbaldwin.com" alt="Email Tyler Baldwin">electronic
+  mail</a>.</p>
+</article>
