--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -2,17 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8">
-    
-    <!-- Always force latest IE rendering engine or request Chrome Frame -->
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    
-    <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "The Middleman" %></title>
-    
-    <%= stylesheet_link_tag "normalize", "all" %>
-    <%= javascript_include_tag  "all" %>
+    <link rel="Shortcut Icon" href="/favicon.png" type="image/x-icon" />
+    <title><%= current_page.data.title || "Tyler Baldwin" %></title>
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900' rel='stylesheet' type='text/css'>
+    <style>
+      body { background: #333 url("images/tyler_baldwin_bg.jpg") no-repeat center center fixed; }
+      * { padding: 0; margin: 0; }
+      p { color: #fff; font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica; font-size: 28px; line-height: 42px; margin-bottom: 22px; -webkit-font-smoothing: antialiased; }
+      a { color: #fff; font-weight: bold; text-decoration: none; border-bottom: 1px solid rgba(255,255,255,0.3); }
+      a:hover { color: #990000; border-bottom: 1px solid rgba(255,255,255,1); }
+      .about { position:absolute; top:0; right:0; bottom:0; width:30%; background:rgba(0,0,0,.5); padding:2%; }
+      @media only screen and (max-width: 767px) {
+        .about {
+          position:relative;
+          width:320px;
+          padding:10%;
+        }
+      }
+    </style>
   </head>
-  
   <body class="<%= page_classes %>">
     <%= yield %>
   </body>
