--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -5,6 +5,7 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <link rel="Shortcut Icon" href="/favicon.png" type="image/x-icon" />
     <title><%= current_page.data.title || "Tyler Baldwin" %></title>
+    <meta name="google-site-verification" content="EOWq7__lnb5zmfo7h-pMd4hY68wa4VCFR1xt8wMsSvE" />
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900' rel='stylesheet' type='text/css'>
     <style>
       body { background: #333 url("images/tyler_baldwin_bg.jpg") no-repeat center center fixed; }
